  set with the new "\P" escape sequence and are invoked when the line that
  contains the corresponding sequence has been output.
* [nt]roff: The ".index" request has been added to determine the position
  of a string within a string or macro.
* [nt]roff: The ".while", ".break", and ".continue" requests have been
  added as another method to process input repeatedly.
* [nt]roff: The ".ecs" and ".ecr" requests have been added to save and
  restore the escape character.
* [nt]roff: The ".shc" request has been added to set the soft hyphen
  character.
* [nt]roff: The ".hcode" request has been added to specify character
  mappings for hyphenation purposes.
* [nt]roff: The sets of sentence-ending and transparent characters are
  now configurable with the ".sentchar" and ".transchar" requests.
* [nt]roff: The set of optional line break characters (normally hyphen
  and em dash) is now configurable with the ".breakchar" request.
* [nt]roff: The ".nhychar" request defines a set of hyphenation-
  inhibiting characters (as hyphen and em dash with traditional troff
  hyphenation).
* troff: The second argument to the ".ss" request now actually sets the
  size of the sentence-end space instead of just switching it on or off.
* [nt]roff: The ".unformat" and ".asciify" requests have been added to
  remove the effects of adjustment, and font and point size information,
  respectively, from a diversion.
* [nt]roff: The ".als" request has been added to create an alias name
  for a request, macro, or string.
* [nt]roff: The ".aln" request has been added to create an alias name
  for a number register.
* [nt]roff: The ".rnn" request has been added to rename a number register.
* troff: The "\Yx", "\Y(xx", or "\Y[xxx]" escape sequence has been added
  to output the contents of the string or macro x, xx, or xxx, respectively,
  as a device control function.
* [nt]roff: The "\$0" escape sequence has been added to refer to the name
  of the current macro or string.