@@ -43,7 +43,7 @@
 .\"
 .\"
 .\" Changes by Gunnar Ritter, Freiburg i. Br., Germany, February 2006.
-.\" Sccsid @(#)doc.tr	1.90 (gritter) 7/30/06
+.\" Sccsid @(#)doc.tr	1.91 (gritter) 8/2/06
 .\"
 .\" from file m.mac
 .do xflag 3
@@ -90,7 +90,7 @@
 .fallback BI BIE
 .flig BI 31
 ..
-.ds Sccsdate 7/30/06
+.ds Sccsdate 8/2/06
 .ds Str \*[Sccsdate]
 .substring Str 0 0
 .if '\*[Str]'%' \{\
@@ -1307,6 +1307,8 @@ Number Registers
 .bt
 \T'nr'\fB&nr\fI|R|\(+-N|M\fR		\(en	\fBu\fR	Define and set number register \fIR\fR; auto-increment by \fIM\fR.\T
 .b1
+\T'nrf'\fB&nrf\fI|R|\(+-F|G\fR		\(en	\fBu\fR	Define and set floating-point register \fIR\fR; auto-increment by \fIG\fR.\T
+.b1
 \T'af'\fB&af\fI|R|c\fR	arabic	\(en	\(en	Assign format to register \fIR\fR (\fIc=\fB1\fR, \fBi\fR, \fBI\fR, \fBa\fR, \fBA\fR).\T
 .b1
 \T'rr'\fB&rr\fI|R\fR	\(en	\(en	\(en	Remove register \fIR\fR.\T
@@ -1623,6 +1625,7 @@ Device and Font Description Files
 \T'nn'nn	15\T
 \T'nop'nop	20\T
 \T'nr'nr	8\T
+\T'nrf'nrf	8\T
 \T'ns'ns	5\T
 \T'nx'nx	19\T
 \T'open'open	19\T
@@ -2166,6 +2169,8 @@ or ignoring scaling indicators if \fIc\fR is omitted)
 may be used.
 Except where controlled by parentheses, evaluation of expressions is left-to-right;
 there is no operator precedence.
+Comparison computations are executed on integer values (in basic units)
+except with the arguments to the \T'nrf'\fBnrf\fR\T request.
 In the case of certain requests, an initial \fB\(pl\fR or \fB\(mi\fR is stripped
 and interpreted as an increment or decrement indicator respectively.
 In the presence of default scaling, the desired scale indicator must be
@@ -3741,6 +3746,12 @@ _
 \fB\en+[\fIxxx\fB]\fR	\fIxxx\fR incremented by \fIM\fR	\fIN+M\fR
 \fB\en\-[\fIxxx\fB]\fR	\fIxxx\fR decremented by \fIM\fR	\fIN\-M\fR
 .TE
+Floating-point registers can be created and modified using \fBnrf\fR.
+They share a common name space with integer registers;
+a \fBnr\fR request turns a floating-point register into
+an integer register.
+Access and auto-increment are as with integer registers.
+.xx
 When interpolated, a number register is converted to
 decimal (default),
 decimal with leading zeros,
@@ -3758,6 +3769,15 @@ with respect to the previous value, if any.
 The increment for auto-incrementing is set to \fIM\fR.
 An alternate syntax is available
 with the \A'e_R'\fB\eR\fI\'R\ \(+-N\'\fR escape sequence.
+.bta nrf
+\fB&nrf\fI|R|\(+-F|G\fR		\(en	\fBu\fR	\
+The floating-point register \fIR\fR is assigned the value \fI\(+-F\fR
+with respect to the previous value, if any.
+Comparison computations in the expression \fIF\fR
+are performed using floating-point values.
+The increment for auto-incrementing,
+which may also be a floating-point value,
+is set to \fIG\fR.
 .bta af
 \fB&af\fI|R|c\fR	arabic	\(en	\(en	Assign format \fIc\fR to register \fIR\fR.
 The available formats are:
@@ -3778,7 +3798,8 @@ _
 .TE
 An arabic format having \fIN\fR digits
 specifies a field width of \fIN\fR digits (example 2 above).
-The read-only registers and \T'c_width'the \fIwidth\fR function (\(sc11.2)\T
+The read-only registers, \T'c_width'the \fIwidth\fR function (\(sc11.2)\T,
+and floating-point registers
 are always arabic.
 Warning: the value of a number register in a non-Arabic format
 is not numeric, and will not produce the expected results
@@ -3787,6 +3808,7 @@ in \T'c_expr'expressions\T.
 The function \A'e_g'\fB\eg\fIx\fR, \fB\eg(\fIxx\fR, or \fB\eg[\fIxxx\fB]\fR
 returns the format of a number register in a form suitable for \fBaf\fR;
 it returns nothing if the register has not been used.
+.xx
 .bta rr
 \fB&rr\fI|R\fR	\(en	ignored	\(en	Remove register \fIR\fR.
 If many registers are being created dynamically, it
@@ -4665,7 +4687,8 @@ Conditional Acceptance of Input
 In the following,
 \fIc\fR is a one-character, built-in \fIcondition\fR name,
 \fB!\fR signifies \fInot\fR,
-\fIN\fR is a \T'c_expr'numerical expression\T,
+\fIN\fR is a \T'c_expr'numerical expression\T
+(with comparison computations based on integer values),
 \fIstring1\fR and \fIstring2\fR are strings delimited by any non-blank, non-numeric character \fInot\fR in the strings,
 and
 \fIanything\fR represents what is conditionally accepted.
@@ -5207,10 +5230,11 @@ picture description
 .h1
 .bta psbb
 \fB&psbb\fI|filename\fR	\(en	\(en	\
-Read the \fB%%BoundingBox\fR \s-1DSC\s+1 comment
+Read the \fB%%HiResBoundingBox\fR \s-1DSC\s+1 comment,
+or, if no such comment is found, \fB%%BoundingBox\fR,
 from the \*(PS document \fIfilename\fR
-and assigns
-the lower left \fIx\fR coordinate to the register \fBllx\fR,
+and assign
+the lower left \fIx\fR coordinate to the floating-point register \fBllx\fR,
 the lower left \fIy\fR coordinate to \fBlly\fR,
 the upper right \fIx\fR coordinate to \fBurx\fR,
 and the upper right \fIy\fR coordinate to \fBury\fR.
